# model-ledger

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  glossary.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: ci.yml  docs.yml  gitleaks.yml  release.yml
.rp1/context/: architecture.md  charter.md  concept_map.md  index.md  modules.md  patterns.md  state.json
adr/: 0001-event-log-not-a-registry.md  0004-framework-agnostic.md  0005-storage-agnostic.md  0006-discovery-and-validation-subsystems.md  index.html  index.md
adr/0001-event-log-not-a-registry/: index.html
adr/0002-everything-is-a-datanode/: index.html
adr/0003-agents-first/: index.html
adr/0004-framework-agnostic/: index.html
adr/0005-storage-agnostic/: index.html
adr/0006-discovery-and-validation-subsystems/: index.html
concepts/: architecture.md  guarantees.md  index.html
concepts/architecture/: index.html
concepts/composite/: index.html
concepts/datanode/: index.html
concepts/guarantees/: index.html
concepts/snapshot/: index.html
docs/: governance.md  index.md  installation.md  llms-full.txt  llms.txt  quickstart.md  robots.txt  snapshot-ledger-design-v0.3.0.md  technical-design.md  what-and-why.md
docs/adr/: 0002-everything-is-a-datanode.md  0003-agents-first.md  index.md
docs/concepts/: composite.md  datanode.md  index.md  snapshot.md
docs/guides/: agents.md  backends.md  cli.md
docs/javascripts/: md-actions.js
docs/plans/: 2026-04-01-v040-datanode-graph.md
docs/recipes/: impact-analysis.md  point-in-time.md
docs/reference/: index.md
docs/stylesheets/: extra.css
docs_hooks/: llms_txt.py
glossary/: index.html
governance/: index.html
guides/: backends.md  connectors.md
guides/agents/: index.html
guides/backends/: index.html
guides/cli/: index.html
guides/connectors/: index.html
includes/: abbreviations.md
installation/: index.html
overrides/: 404.html  main.html
quickstart/: index.html
recipes/: discover-sql.md  index.html  index.md
recipes/discover-sql/: index.html
recipes/impact-analysis/: index.html
recipes/point-in-time/: index.html
reference/: index.html
scripts/: make_og_card.py  mcp-snowflake.sh
search/: search_index.json
src/model_ledger/: __init__.py
tests/: test_backends_entrypoints.py  test_datasets.py  test_docs_examples.py  test_invariants.py
tests/test_adapters/: test_sql.py  test_tables.py
tests/test_backends/: test_batch_fallbacks.py  test_get_models.py  test_http_backend.py  test_json_files.py  test_ledger_memory.py  test_snowflake_ledger.py  test_sqlite_ledger.py
tests/test_cli/: test_app.py
tests/test_connectors/: test_github_connector.py  test_prefect_connector.py  (+2 more)
(+112 files in other folders)
