[project]
name = "model-ledger"
version = "0.3.0"
description = "Developer-first model inventory and governance framework for SR 11-7, EU AI Act, and NIST AI RMF compliance"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Vignesh Narayanaswamy", email = "vigneshn@block.xyz" },
    { name = "Block", email = "opensource@block.xyz" },
]
keywords = ["mlops", "model-governance", "model-inventory", "model-risk", "sr-11-7", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
cli = ["typer>=0.9", "rich>=13.0"]
excel = ["openpyxl>=3.1"]
introspect-sklearn = ["scikit-learn>=1.0"]
introspect-xgboost = ["xgboost>=1.7"]
introspect-lightgbm = ["lightgbm>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.0",
]

[project.scripts]
model-ledger = "model_ledger.cli:app"

[project.entry-points."model_ledger.introspectors"]
lightgbm = "model_ledger.introspect.lightgbm:LightGBMIntrospector"
sklearn = "model_ledger.introspect.sklearn:SklearnIntrospector"
xgboost = "model_ledger.introspect.xgboost:XGBoostIntrospector"

[project.urls]
Homepage = "https://github.com/block/model-ledger"
Documentation = "https://block.github.io/model-ledger"
Changelog = "https://github.com/block/model-ledger/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/block/model-ledger/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_ledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/model_ledger"]
branch = true

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
